main: Fix warnings

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="DE">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -26,13 +26,6 @@
       width: auto;
     }
 
-    .infoText .infoTextSpan {
-      display: none;
-    }
-
-    .infoText .infoTextSpan:first-child {
-      display: initial;
-    }
   </style>
 </head>
 
