--- a/index.html
+++ b/index.html
@@ -36,18 +36,7 @@
         <svg width="960" height="600" viewBox="-480 -300 960 600"></svg>
       </div>
       <div class="sidebar column">
-        <div class="box mt-6">
-          <div class="block">
-            <h3 class="title is-5 mb-2">Information</h3>
-            <p class="infoText">
-            </p>
-          </div>
-        </div>
         <div class="box">
-          <div class="block">
-            <h3 class="title is-5 mb-2">Filter</h3>
-            <div class="filters mt-1"></div>
-          </div>
           <div class="block">
             <h3 class="title is-5 mb-2">Legende</h3>
             <ul class="legend">
@@ -60,6 +49,19 @@
                 <br>Frequenz des Austausch. Je breiter, desto häufiger.
               </li>
             </ul>
+          </div>
+        </div>
+        <div class="box">
+          <div class="block">
+            <h3 class="title is-5 mb-2">Filter</h3>
+            <div class="filters mt-1"></div>
+          </div>
+        </div>
+        <div class="box">
+          <div class="block">
+            <h3 class="title is-5 mb-2">Information</h3>
+            <p class="infoText">
+            </p>
           </div>
         </div>
       </div>
