--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="vis column is-three-quarters">
         <svg width="960" height="600" viewBox="-480 -300 960 600"></svg>
       </div>
-      <div class="sidebar column">
+      <div class="sidebar column" style="width: 1500px;">
         <div class="box">
           <div class="block">
             <h3 class="title is-5 mb-2">Legende</h3>
@@ -60,8 +60,8 @@
         <div class="box">
           <div class="block">
             <h3 class="title is-5 mb-2">Information</h3>
-            <p class="infoText">
-            </p>
+            <div class="infoText">
+            </div>
           </div>
         </div>
       </div>
