A?2 Schrift und Schriftgröße der Visualisierung

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </div>
   </div>
 
-  <footer class="p-6 has-text-centered has-background-light mt-6">
-    <p>© AG Systemlandschaft E-Ressourcen</p>
+  <footer class="has-text-centered">
+    <p>© 2024 AG Systemlandschaft E-Ressourcen</p>
   </footer>
 
 </body>
