AA: Use more free space, change buttons to german text, handle missing properties

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="columns">
       <div class="vis column is-three-quarters">
-        <svg width="960" height="600" viewBox="-480 -300 960 600"></svg>
+        <svg width="100%" height="100%" viewBox="-480 -300 960 600"></svg>
       </div>
       <div class="sidebar column" style="width: 1500px;">
         <div class="box">
