--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>AG Systemlandschaft E-Ressourcen</title>
+  <link rel="stylesheet" href="https://ag-systemlandschaft.de/app/uploads/omgf/google-fonts-1/google-fonts-1.css?ver=1678363732">
   <link rel="stylesheet" href="assets/external/bulma.min.css">
   <link rel="stylesheet" href="assets/index.css">
 </head>
