FIZE-565: tolerance around exchange arcs

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 <script src="assets/external/fontawesome.min.js"></script>
 <script src="assets/external/d3.min.js"></script>
 
+<script src="assets/constants.js"></script>
 <script src="assets/interaction.js"></script>
 <script src="assets/graph.js"></script>
 <script src="assets/filter.js"></script>
