--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
             </div>
           </div>
         </div>
-        <div class="vis column">
+        <div class="vis column" style="min-width: 500px">
           <svg width="100%" height="90%" viewBox="-480 -300 960 550"></svg>
         </div>
         <div class="sidebar column" style="width: 300px; flex: none;">
           <div class="box">
             <div class="block">
-              <h3 class="title is-5 mb-2">Information</h3>
               <div class="infoText">
               </div>
             </div>
