FIZE-598, FIZE-599, FIZE-590: Add comments, avoid overlap and set sidebar width

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
 
       <div class="navbar-menu">
+        <!-- Anpassung erfolgt durch EZB -->
         <div class="navbar-end">
           <a class="navbar-item" href="https://ag-systemlandschaft.de">Information</a>
           <a class="navbar-item" href="https://ag-systemlandschaft.de/ziele/">Ziele</a>
@@ -34,7 +35,7 @@
       </div>
 
       <div class="columns is-gapless">
-        <div class="sidebar column" style="width: 380px; flex: none;">
+        <div class="sidebar column">
           <div class="box">
             <div class="block" style="position: relative; height: 600px;">
               <h3 class="title is-5 mb-2">Filter</h3>
@@ -81,7 +82,7 @@
             </div>
           </div>
         </div>
-        <div class="sidebar column" style="width: 300px; flex: none;">
+        <div class="sidebar column">
           <div class="box">
             <div class="block">
               <div class="infoText">
@@ -94,6 +95,7 @@
     </div>
 
     <footer class="has-text-centered">
+      <!-- Anpassung erfolgt durch EZB -->
       <p>© 2024 AG Systemlandschaft E-Ressourcen</p>
     </footer>
   </div>
