FIZE-555: Style in css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="is-fluid" style="height: 90%">
+  <div class="is-fluid">
     <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
       <div class="navbar-brand p-2">
         <a href="https://ag-systemlandschaft.de">
@@ -37,10 +37,10 @@
       <div class="columns is-gapless">
         <div class="sidebar column">
           <div class="box">
-            <div class="block" style="position: relative; height: 600px;">
+            <div class="block filter">
               <h3 class="title is-5 mb-2">Filter</h3>
-              <div class="filters mt-1" style="overflow-y: auto; height: calc(100% - 90px);"></div>
-              <div class="buttons" style="position: absolute; bottom: 10px; left: 10px;"></div>
+              <div class="filters mt-1"></div>
+              <div class="buttons"></div>
             </div>
           </div>
           <div class="box">
@@ -60,8 +60,8 @@
           </div>
         </div>
         <div class="graph">
-          <div class="vis column" style="min-width: 500px">
-            <svg width="100%" height="90%" viewBox="-480 -300 960 550"></svg>
+          <div class="vis column">
+            <svg viewBox="-480 -300 960 550"></svg>
           </div>
           <div class="controls zoom">
             <div class="button-container">
