adjustments to header and footer

--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
 
 <body>
   <div class="is-fluid">
-    <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand p-2">
+    <nav class="navbar has-shadow" role="navigation" aria-label="main navigation" style="text-align:center;">
+      <div class="navbar-brand p-2" style="margin-left: 15%; margin-right: 5%">
         <a href="https://ag-systemlandschaft.de">
-          <img class="logo" src="https://ag-systemlandschaft.de/app/uploads/2022/12/Logo-AGS-1.png" alt="Logo der AG Systemlandschaft E-Ressourcen">
+          <img class="logo" src="https://ag-systemlandschaft.de/app/uploads/2022/12/Logo-AGS-1.png" alt="Logo der AG Systemlandschaft E-Ressourcen" width="1540" height="294">
         </a>
       </div>
 
       <div class="navbar-menu">
         <!-- Anpassung erfolgt durch EZB -->
-        <div class="navbar-end">
-          <a class="navbar-item" href="https://ag-systemlandschaft.de">Information</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/ziele/">Ziele</a>
+        <div class="navbar-start">
+          <a class="navbar-item" href="https://ag-systemlandschaft.de" style="margin-right: 5%">Home</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/vorhaben/" style="margin-right: 5%">Vorhaben</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/ziele/" style="margin-right: 5%">Ziele</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/status/" style="margin-right: 5%">Status</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/material/" style="margin-right: 5%">Material</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/uber-uns/" style="margin-right: 5%">Über uns</a>
         </div>
       </div>
     </nav>
@@ -94,10 +98,18 @@
       </div>
     </div>
 
-    <footer class="has-text-centered">
-      <!-- Anpassung erfolgt durch EZB -->
-      <p>© 2024 AG Systemlandschaft E-Ressourcen</p>
+    <footer>
+    <!-- Anpassung erfolgt durch EZB -->
+      <table width="100%">
+        <th>
+          <td width="33%" align="center">© 2025 AG Systemlandschaft E-Ressourcen</td>
+          <td width="33%" align="right">Impressum</td>
+          <td width="33%" align="left">Datenschutzerklärung der Universität zu Köln</td>
+        </th>
+      </table>
+
     </footer>
+
   </div>
 </body>
 
