--- a/index.html
+++ b/index.html
@@ -94,9 +94,31 @@
       </div>
     </div>
 
-    <footer class="has-text-centered">
-      <!-- Anpassung erfolgt durch EZB -->
-      <p>© 2024 AG Systemlandschaft E-Ressourcen</p>
+    <footer class="site-info" aria-label="Site" itemtype="https://schema.org/WPFooter" itemscope="">
+      <div class="inside-site-info grid-container">
+        <div class="copyright-bar">
+          <span class="copyright">
+            © 2025 AG Systemlandschaft
+          </span> • Built with
+          <a href="https://generatepress.com" itemprop="url">
+            GeneratePress
+          </a>
+        </div>
+        <div class="footer-bar">
+          <aside id="nav_menu-4" class="widget inner-padding widget_nav_menu">
+            <div class="menu-menu-2-container">
+              <ul id="menu-menu-2" class="menu">
+                <li id="menu-item-76" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-76">
+                  <a href="https://ag-systemlandschaft.de/impressum/">Impressum</a>
+                </li>
+                <li id="menu-item-78" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-78">
+                  <a rel="privacy-policy" href="https://ag-systemlandschaft.de/privacy-policy/">Datenschutzerklärung der Universität zu Köln</a>
+                </li>
+              </ul>
+            </div>
+          </aside>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
