--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="buttons"></div>
             </div>
           </div>
-          <div class="box">
+          <!--<div class="box">
             <div class="block">
               <h3 class="title is-5 mb-2">Legende</h3>
               <ul class="legend">
@@ -61,7 +61,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div>-->
         </div>
         <div class="graph">
           <div class="vis column">
