Update index.html / Überschrift der Visualisierung abgeändert

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container is-fluid">
       <div class="header-container has-text-centered">
         <h1 class="title">Systemlandschaft E-Ressourcen (im Aufbau)</h1>
-        <h2 class="subtitle">Visualisierung bibliothekarischer Infrastruktur zur Verwaltung elektronischer Ressourcen im deutschsprachigen Raum</h2>
+        <h2 class="subtitle">Visualisierung von Datenflüssen zur Verwaltung elektronischer Ressourcen im deutschsprachigen Raum</h2>
       </div>
 
       <div class="columns is-gapless">
