Update index.html / Anpassung Navigation im Header

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
       </div>
 
       <div class="navbar-menu">
-        <!-- Anpassung erfolgt durch EZB -->
+        <!-- Navigation bar in header -->
         <div class="navbar-start">
           <a class="navbar-item" href="https://ag-systemlandschaft.de" style="margin-right: 5%">Home</a>
           <a class="navbar-item" href="https://ag-systemlandschaft.de/vorhaben/" style="margin-right: 5%">Vorhaben</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/ziele/" style="margin-right: 5%">Ziele</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/status/" style="margin-right: 5%">Status</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/material/" style="margin-right: 5%">Material</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/ergebnisse/" style="margin-right: 5%">Ergebnisse</a>
           <a class="navbar-item" href="https://ag-systemlandschaft.de/uber-uns/" style="margin-right: 5%">Über uns</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/material/" style="margin-right: 5%">Material</a>
         </div>
       </div>
     </nav>
