Update index.html / change navigation bar, add boxes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <div class="is-fluid" id="protected-content" style="display: none"> -->
   <div class="is-fluid" id="protected-content">
     <nav class="navbar has-shadow" role="navigation" aria-label="main navigation" style="text-align:center;">
-      <div class="navbar-brand p-2" style="margin-left: 15%; margin-right: 5%">
+      <div class="navbar-brand p-2" style="margin-left: 15%; margin-right: 12%">
         <a href="https://ag-systemlandschaft.de">
           <img class="logo" src="https://ag-systemlandschaft.de/app/uploads/2022/12/Logo-AGS-1.png" alt="Logo der AG Systemlandschaft E-Ressourcen" width="1540" height="294">
         </a>
@@ -24,17 +24,16 @@
         <!-- Navigation bar in header -->
         <div class="navbar-start">
           <a class="navbar-item" href="https://ag-systemlandschaft.de" style="margin-right: 5%">Home</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/vorhaben/" style="margin-right: 5%">Vorhaben</a>
           <a class="navbar-item" href="https://ag-systemlandschaft.de/ergebnisse/" style="margin-right: 5%">Ergebnisse</a>
+          <a class="navbar-item" href="https://ag-systemlandschaft.de/material/" style="margin-right: 5%">Fragebögen</a>
           <a class="navbar-item" href="https://ag-systemlandschaft.de/uber-uns/" style="margin-right: 5%">Über uns</a>
-          <a class="navbar-item" href="https://ag-systemlandschaft.de/material/" style="margin-right: 5%">Material</a>
         </div>
       </div>
     </nav>
 
     <div class="container is-fluid">
       <div class="header-container has-text-centered">
-        <h1 class="title">Systemlandschaft E-Ressourcen (im Aufbau)</h1>
+        <h1 class="title">Systemlandschaft E-Ressourcen (Betaversion)</h1>
         <h2 class="subtitle">Visualisierung von Datenflüssen zur Verwaltung elektronischer Ressourcen im deutschsprachigen Raum</h2>
       </div>
 
@@ -94,10 +93,19 @@
           <div class="box">
             <div class="block">
               <div class="infoText">
-
               </div>
             </div>
           </div>
+           <div class="box">
+            <div class="block">
+              Sie möchten Feedback zur Landkarte oder Anregungen zur Verbesserung geben? Dann schreiben Sie uns gerne eine Nachricht unter <a href="mailto:info@ag-systemlandschaft.de" target="_blank" rel="noopener">info@ag-systemlandschaft.de</a>.
+            </div>
+          </div>
+          <div class="box">
+            <div class="block">
+              Die Systemlandkarte steht unter der Lizenz <a href="https://creativecommons.org/licenses/by/4.0/deed.de" target="blank">CC BY 4.0</a>. Hinweise zur Nutzung finden Sie <a href="https://ag-systemlandschaft.de/app/visualisierung/Hilfetext.pdf" target="blank">hier.</a>
+            </div>
+          </div>  
         </div>
       </div>
     </div>
